# simple-db-backup

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: backup.h  config.h  crud.h
src/: backup.cpp  config.cpp  crud.cpp  database_config.ini  database_config.ini.example  main.cpp
tests/: test_main.cpp
